--- a/loops.ipynb
+++ b/loops.ipynb
@@ -18,10 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "34174986",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "x = 0\n",
     "\n",
@@ -45,10 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8842e97c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "12\n",
+      "123\n",
+      "1234\n",
+      "12345\n"
+     ]
+    }
+   ],
    "source": [
     "number_list = ''\n",
     "x = 0\n",
@@ -63,10 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b7063d75",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "12\n",
+      "123\n",
+      "1234\n",
+      "12345\n"
+     ]
+    }
+   ],
    "source": [
     "for x in range(1,5+1):\n",
     "    for j in range(1,x+1):\n",
@@ -84,10 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cf57a03c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1540\n"
+     ]
+    }
+   ],
    "source": [
     "given = int(input(\"Please, enter a number\"))\n",
     "counter = 0\n",
@@ -110,10 +159,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1a4d7520",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n",
+      "8\n",
+      "12\n",
+      "16\n",
+      "20\n",
+      "24\n",
+      "28\n",
+      "32\n",
+      "36\n",
+      "40\n"
+     ]
+    }
+   ],
    "source": [
     "given = int(input(\"Please, enter a number between 0 and 10\"))\n",
     "\n",
@@ -132,10 +199,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a3f73d2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75\n",
+      "150\n",
+      "145\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [12, 75, 150, 180, 145, 525, 50]\n",
     "\n",
@@ -158,10 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d84faf6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "number = 7472956390\n",
     "counter = 0\n",
@@ -189,10 +274,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f088babb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54321\n",
+      "4321\n",
+      "321\n",
+      "21\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "number = 5\n",
     "\n",
@@ -214,10 +311,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3c9d9aaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "40\n",
+      "30\n",
+      "20\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "list_direct = [10, 20, 30, 40, 50]\n",
     "lis_inversed =[]\n",
@@ -237,10 +346,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5705d58b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-10\n",
+      "-9\n",
+      "-8\n",
+      "-7\n",
+      "-6\n",
+      "-5\n",
+      "-4\n",
+      "-3\n",
+      "-2\n",
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "for num in range(-10,0):\n",
     "    print(num)"
@@ -256,10 +382,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4ff6d33a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n"
+     ]
+    }
+   ],
    "source": [
     "left_limit = int(input(\"Enter a number, please.\"))\n",
     "right_limit = int(input(\"Enter the second number.\"))\n",
@@ -284,10 +436,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9ad8a218",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 "
+     ]
+    }
+   ],
    "source": [
     "terms = 10\n",
     "number = 0\n",
@@ -310,10 +470,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b0cada2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
    "source": [
     "n = 5\n",
     "factorial = 1\n",
@@ -325,10 +493,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b55a9ba5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
    "source": [
     "num_ = 5\n",
     "factorial_ = 1\n",
@@ -350,10 +526,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4c17bcdf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reversed    4321\n"
+     ]
+    }
+   ],
    "source": [
     "given_n = 1234\n",
     "reversed_n = 0\n",
@@ -380,10 +564,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7a2ce037",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 2, number: 30\n",
+      "Index: 4, number: 50\n",
+      "Index: 6, number: 70\n",
+      "Index: 8, number: 90\n"
+     ]
+    }
+   ],
    "source": [
     "my_list = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
     "\n",
@@ -402,10 +597,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "cd67539f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input(\"Enter an integer number.\"))\n",
     "digits_sum = 0\n",
@@ -428,10 +631,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "fe3d9265",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number: 1. The cube is: 1\n",
+      "Number: 2. The cube is: 8\n",
+      "Number: 3. The cube is: 27\n",
+      "Number: 4. The cube is: 64\n",
+      "Number: 5. The cube is: 125\n",
+      "Number: 6. The cube is: 216\n",
+      "Number: 7. The cube is: 343\n"
+     ]
+    }
+   ],
    "source": [
     "input_num = int(input(\"Enter a number.\"))\n",
     "\n",
@@ -459,10 +676,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "c539c7fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n",
+      "* * * * \n",
+      "* * * \n",
+      "* * \n",
+      "* \n"
+     ]
+    }
+   ],
    "source": [
     "limiter = 5\n",
     "\n",
@@ -489,10 +722,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "18c76519",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MULTIPLICATION TABLE OF 7\n",
+      "\n",
+      "Multiplication     Result\n",
+      "\n",
+      "7 X 0                0\n",
+      "7 X 1                7\n",
+      "7 X 2               14\n",
+      "7 X 3               21\n",
+      "7 X 4               28\n",
+      "7 X 5               35\n",
+      "7 X 6               42\n",
+      "7 X 7               49\n",
+      "7 X 8               56\n",
+      "7 X 9               63\n",
+      "7 X 10              70\n"
+     ]
+    }
+   ],
    "source": [
     "given = int(input(\"Please, enter a number\"))\n",
     "print(f\"MULTIPLICATION TABLE OF {given}\")\n",
@@ -521,10 +776,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ee4969bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "2 3 \n",
+      "4 5 6 \n",
+      "7 8 9 10 \n",
+      "11 12 13 14 15 \n"
+     ]
+    }
+   ],
    "source": [
     "last_num = 5\n",
     "init_num = 1\n",
@@ -548,21 +815,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "c034e969",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "nested_list = [1, [2, 3], [4, 5, 6], 7, [8, 9]]\n",
     "\n",
     "flatten_list = []\n",
     "\n",
     "for elements in nested_list:\n",
-    "    for x in elements:\n",
-    "        flatten_list.append(x)\n",
+    "    if isinstance(elements,int):\n",
+    "        flatten_list.append(elements)\n",
+    "    else:\n",
+    "        for x in elements:\n",
+    "            flatten_list.append(x)\n",
     "\n",
     "print(flatten_list)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b40c27c1",
+   "metadata": {},
+   "source": [
+    "##### 21. Find and print the largest and smallest digit in a number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "8aa2872c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest digit is: 8\n",
+      "The smallest digit is 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 48218\n",
+    "\n",
+    "new_num = str(num)\n",
+    "\n",
+    "largest = 0\n",
+    "smallest = 9\n",
+    "\n",
+    "\n",
+    "\n",
+    "for x in new_num:\n",
+    "    converted_x = int(x)    \n",
+    "\n",
+    "    if converted_x > largest:\n",
+    "        largest = converted_x\n",
+    "    elif converted_x < smallest:\n",
+    "        smallest = converted_x\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "print(f\"The largest digit is: {largest}\\nThe smallest digit is {smallest}\")"
    ]
   }
  ],
