--- a/functions.ipynb
+++ b/functions.ipynb
@@ -178,12 +178,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bdfbee21",
+   "metadata": {},
+   "source": [
+    "##### 6. Create a recursive function that calculates the sum of all number from 0 to the input number."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "65241132",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def recursive_sum(inp: int) -> int:\n",
+    "\n",
+    "    sum = 0\n",
+    "    if inp > 0:\n",
+    "        sum = inp + recursive_sum(inp-1)\n",
+    "\n",
+    "    return sum      \n",
+    "\n",
+    "    \n",
+    "print(recursive_sum(4))\n"
+   ]
   }
  ],
  "metadata": {
