--- a/functions.ipynb
+++ b/functions.ipynb
@@ -187,16 +187,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "65241132",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -209,8 +212,122 @@
     "    return sum      \n",
     "\n",
     "    \n",
-    "print(recursive_sum(4))\n"
+    "recursive_sum(4)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be3f4e4d",
+   "metadata": {},
+   "source": [
+    "##### 7. Change the name of a function and call it with the new name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "3de6e107",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Called the function both with the initial and the new name and the result are:\n",
+      "recursive_sum: 10\n",
+      "new_recursive: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "initial_name = recursive_sum(4)\n",
+    "\n",
+    "new_recursive = recursive_sum\n",
+    "\n",
+    "new_name = new_recursive(4) \n",
+    "    \n",
+    "print(f'Called the function both with the initial and the new name and the result are:\\nrecursive_sum: {initial_name}\\nnew_recursive: {new_name}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79d7a170",
+   "metadata": {},
+   "source": [
+    "##### 8. Ask for two input number and store in a list all even numbers between them using a function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d55ef7e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered the same number. First and second number are 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The list of even number is: []'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def even_numbers():\n",
+    "\n",
+    "    even_num = []\n",
+    "\n",
+    "    first_num = int(input(\"Enter the first number, please\"))\n",
+    "    second_num = int(input(\"Enter a second number, please\"))\n",
+    "\n",
+    "    if first_num < second_num:\n",
+    "\n",
+    "        for x in range(first_num, second_num+1):\n",
+    "            if x % 2 == 0:\n",
+    "                even_num.append(x)\n",
+    "            else:\n",
+    "                continue\n",
+    "\n",
+    "    elif first_num > second_num:\n",
+    "\n",
+    "        for x in range(second_num, first_num+1):\n",
+    "            if x % 2 == 0:\n",
+    "                even_num.append(x)\n",
+    "            else:\n",
+    "                continue\n",
+    "    \n",
+    "    else:\n",
+    "        if first_num % 2 == 0:\n",
+    "            even_num.append(first_num)\n",
+    "            print(f\"You entered the same number. First and second number are {first_num}\")\n",
+    "        else:\n",
+    "            print(f\"You entered the same number. First and second number are {first_num}\")\n",
+    "\n",
+    "        \n",
+    "    return f\"The list of even number is: {even_num}\"\n",
+    "\n",
+    "\n",
+    "even_numbers()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67ded822",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
