--- a/functions.ipynb
+++ b/functions.ipynb
@@ -322,12 +322,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8123a2b8",
+   "metadata": {},
+   "source": [
+    "##### 9. Write a Function that modify the value of a global variable type float. Round the initial global value to the next integer."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
+   "id": "0299db3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The initial global variable is 9.272984\n",
+      "The new global variable is 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "general_var: float = 9.272984\n",
+    "\n",
+    "def change_global(var:float)-> int:\n",
+    "\n",
+    "    var = int(var)\n",
+    "\n",
+    "    return var\n",
+    "\n",
+    "print(f'\\nThe initial global variable is {general_var}')\n",
+    "\n",
+    "print(f'The new global variable is {change_global(general_var)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a51dd7d1",
+   "metadata": {},
+   "source": [
+    "##### 10 Create an higher order function that takes a function as a parameter. For example, given two measures in mt, calculate the area, and then the tax on the area."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "id": "67ded822",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The property is 35 square mt and the tax on it amount to 350 euro\n"
+     ]
+    }
+   ],
+   "source": [
+    "def area_calculator(side_one, side_two) -> int:\n",
+    "\n",
+    "    area = side_one * side_two\n",
+    "\n",
+    "    return area\n",
+    "\n",
+    "\n",
+    "def area_tax(area, tax_sqr):\n",
+    "\n",
+    "    property_tax = area * tax_sqr\n",
+    "\n",
+    "    return f'The property is {area} square mt and the tax on it amount to {property_tax} euro'\n",
+    "\n",
+    "\n",
+    "print(area_tax(area_calculator(5,7), 10))"
+   ]
   }
  ],
  "metadata": {
