--- a/lists.ipynb
+++ b/lists.ipynb
@@ -21,18 +21,7 @@
    "execution_count": null,
    "id": "0bc6da65",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n",
-      "K\n",
-      "y\n",
-      "m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "full_name: str = \"Kamil Ashardy\"\n",
     "\n",
@@ -57,6 +46,28 @@
     "# print the third letter of your name\n",
     "\n",
     "print(letters_name[2])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9799f43",
+   "metadata": {},
+   "source": [
+    "##### 2. Some list manipulations: create a list of 10 random numbers (do it manually), change the third element to be 300, add the number 500 at the end of it,  insert in the 4th position the number 400, remove the second last element and then print it out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b2013b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_list = [22,55,4,88,34,35,422,2,90,12]     # expected output: [22,55,300,400,88,34,35,422,2,90,500]\n",
+    "\n",
+    "first_list[2] = 300\n",
+    "\n",
+    "print(first_list)"
    ]
   }
  ],
