--- a/lists.ipynb
+++ b/lists.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0bc6da65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "K\n",
+      "y\n",
+      "m\n"
+     ]
+    }
+   ],
    "source": [
     "full_name: str = \"Kamil Ashardy\"\n",
     "\n",
@@ -58,14 +69,34 @@
    "execution_count": null,
    "id": "3b2013b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 55, 300, 400, 88, 34, 35, 422, 2, 90, 500]\n"
+     ]
+    }
+   ],
    "source": [
     "first_list = [22,55,4,88,34,35,422,2,90,12]     # expected output: [22,55,300,400,88,34,35,422,2,90,500]\n",
     "\n",
     "first_list[2] = 300\n",
     "\n",
+    "first_list.append(500)\n",
+    "\n",
+    "first_list.insert(3,400)\n",
+    "\n",
+    "del first_list[-2]\n",
+    "\n",
     "print(first_list)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66415215",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
