--- a/lists.ipynb
+++ b/lists.ipynb
@@ -96,6 +96,327 @@
    "cell_type": "markdown",
    "id": "66415215",
    "metadata": {},
+   "source": [
+    "##### 3. From a list of number, calculate the sum and the average of the numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2fed500d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "136\n",
+      "19.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "numb_list = [3,1,33,5,14,72,8]\n",
+    "\n",
+    "\n",
+    "sum_elements = sum(numb_list)\n",
+    "\n",
+    "avg_numb_list = sum_elements / len(numb_list)\n",
+    "\n",
+    "\n",
+    "print(sum_elements)\n",
+    "print(round(avg_numb_list,1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c085540",
+   "metadata": {},
+   "source": [
+    "##### 4. Reverse a list of numbers without using the reverse function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "58bc8ee7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "straight = [0,1,2,3,4,5,6,7,8,9]\n",
+    "\n",
+    "reversed = []\n",
+    "\n",
+    "for num in range(len(straight)-1,-1,-1):\n",
+    "\n",
+    "    reversed.append(straight[num])\n",
+    "\n",
+    "print(straight)\n",
+    "print(reversed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "290a4415",
+   "metadata": {},
+   "source": [
+    "##### 5. A list of integers, turn all the numbers in their squared value. Do not create a new list just modify the existing one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "54457ef8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 7, 11, 4, 23, 9]\n",
+      "[4, 49, 121, 16, 529, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "basic_list = [2,7,11,4,23,9]\n",
+    "print(basic_list)\n",
+    "\n",
+    "for num in range(len(basic_list)):\n",
+    "    basic_list[num] = basic_list[num]**2\n",
+    "\n",
+    "print(basic_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccea8cd2",
+   "metadata": {},
+   "source": [
+    "##### 6. Find the max and the min value in a list of numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "45a6d57f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 11, 7, 4, 9, 6, 232, 5]\n",
+      "3\n",
+      "232\n"
+     ]
+    }
+   ],
+   "source": [
+    "other_list = [3,11,7,4,9,6,232,5]\n",
+    "\n",
+    "print(other_list)\n",
+    "\n",
+    "print(min(other_list))\n",
+    "\n",
+    "print(max(other_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d7bf26b",
+   "metadata": {},
+   "source": [
+    "##### 7. Give an example of the count() function with a list of numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "098d7252",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 11, 5, 2, 3, 77, 9, 3, 45, 654, 3, 90, 59, 90]\n",
+      "4\n",
+      "2\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "listone = [3,11,5,2,3,77,9,3,45,654,3,90,59,90]\n",
+    "print(listone)\n",
+    "\n",
+    "print(listone.count(3))\n",
+    "print(listone.count(90))\n",
+    "print(listone.count(282))\n",
+    "print(listone.count(77))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b26d3585",
+   "metadata": {},
+   "source": [
+    "##### 8. Sort a list of numbers in ascending and descending order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "82ed8840",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 11, 5, 2, 77, 9, 45, 654, 90, 59]\n",
+      "[2, 3, 5, 9, 11, 45, 59, 77, 90, 654]\n",
+      "[654, 90, 77, 59, 45, 11, 9, 5, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "listone = [3,11,5,2,77,9,45,654,90,59]\n",
+    "\n",
+    "ascending = sorted(listone)\n",
+    "descending = sorted(listone,reverse=True)\n",
+    "\n",
+    "print(listone)\n",
+    "print(ascending)\n",
+    "print(descending)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbbe7d61",
+   "metadata": {},
+   "source": [
+    "##### 9. Combine two lists  into a single one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9aa6eb0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 3, 5, 'a', 'r', 't', 'y']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_uno = [1,4,3,5]\n",
+    "list_due = ['a','r','t','y']\n",
+    "\n",
+    "unified = list_uno + list_due\n",
+    "\n",
+    "print(unified)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95e82219",
+   "metadata": {},
+   "source": [
+    "##### 10. From a list of string, eliminate the empty strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "134c41cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['friend', '', 'lawyer', 'parent', '', 'doctor', '', 'driver']\n",
+      "['friend', 'lawyer', 'parent', 'doctor', 'driver']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words_list = ['friend','','lawyer','parent','','doctor','','driver']\n",
+    "new_words_list = []\n",
+    "\n",
+    "\n",
+    "for word in words_list:\n",
+    "    if word == '':\n",
+    "        continue\n",
+    "    else:\n",
+    "        new_words_list.append(word)\n",
+    "\n",
+    "print(words_list)    \n",
+    "print(new_words_list)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6259303d",
+   "metadata": {},
+   "source": [
+    "##### 11. Remove duplicates from a list of numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "181cd416",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "duplicates = [1, 2, 2, 3, 1, 4, 5, 4]\n",
+    "\n",
+    "duplicates = set(duplicates)\n",
+    "\n",
+    "duplicates = list(duplicates)\n",
+    "\n",
+    "print(duplicates)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4092608c",
+   "metadata": {},
+   "source": [
+    "##### 12. From a list of numbers and strings, create two separate lists one for the numbers and one for the strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86600b76",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
