--- a/lists.ipynb
+++ b/lists.ipynb
@@ -408,13 +408,41 @@
    "id": "4092608c",
    "metadata": {},
    "source": [
-    "##### 12. From a list of numbers and strings, create two separate lists one for the numbers and one for the strings."
+    "##### 12. From a list of numbers and strings, create two separate lists one for the numbers and one for the strings. Use list comprehension."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "86600b76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 44, 22, 7, 23, 78, 34]\n",
+      "['Carl', 'Ella', 'Amber', 'Michal', 'Lumber']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mixed_list = [1, 'Carl', 44, 'Ella', 22, 'Amber', 7, 23, 78, 'Michal', 'Lumber', 34]\n",
+    "\n",
+    "\n",
+    "integer_list = [element for element in mixed_list if isinstance(element, int)]\n",
+    "\n",
+    "string_list = [element for element in mixed_list if isinstance(element,str)]\n",
+    "\n",
+    "print(integer_list)\n",
+    "\n",
+    "print(string_list)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86600b76",
+   "id": "c1b6ad88",
    "metadata": {},
    "outputs": [],
    "source": []
