--- a/lists.ipynb
+++ b/lists.ipynb
@@ -440,12 +440,268 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e69534c4",
+   "metadata": {},
+   "source": [
+    "##### 13. From a nested list, access only the all the string elements, and print them out one by one."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "c1b6ad88",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carl\n",
+      "Ella\n",
+      "Amber\n",
+      "Michal\n",
+      "Lumber\n"
+     ]
+    }
+   ],
+   "source": [
+    "nested_list = [1, 'Carl', 44, ['Ella', 22, 'Amber', 7, 23], 78, 'Michal', ['Lumber', 34]]\n",
+    "\n",
+    "for element in nested_list:\n",
+    "    if isinstance(element, list):\n",
+    "        for j in element:\n",
+    "            if isinstance(j,str):\n",
+    "                print(j)\n",
+    "    elif isinstance(element, str):\n",
+    "        print(element)\n",
+    "\n",
+    "    else:\n",
+    "        continue \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e17328e",
+   "metadata": {},
+   "source": [
+    "##### 14. Concatenate two lists index by index. Then print the result. E.g. [\"M\", \"na\", \"i\", \"Ke\"] and [\"y\", \"me\", \"s\", \"lly\"] should become [\"My\", \"name\", \"is\", \"Kelly\"]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "b80cf8dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['My', 'name', 'is', 'Kelly']\n",
+      "My name is Kelly "
+     ]
+    }
+   ],
+   "source": [
+    "first_conc =  [\"M\", \"na\", \"i\", \"Ke\"]\n",
+    "second_conc = [\"y\", \"me\", \"s\", \"lly\"]\n",
+    "\n",
+    "merged_by_index = []\n",
+    "\n",
+    "\n",
+    "for x,y in zip(first_conc, second_conc):\n",
+    "\n",
+    "    merged_by_index.append(x+y)\n",
+    "\n",
+    "print(merged_by_index)\n",
+    "\n",
+    "for merged in merged_by_index:\n",
+    "    print(merged, end=' ')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b40d01fe",
+   "metadata": {},
+   "source": [
+    "##### 15. Two lists, iterate both lists simultaneously and print the elements from the first in the original order and the elements from the second in reverse order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "95d62ae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 400\n",
+      "20 300\n",
+      "30 200\n",
+      "40 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [10, 20, 30, 40]\n",
+    "list2 = [100, 200, 300, 400]\n",
+    "\n",
+    "list2.reverse()\n",
+    "\n",
+    "for l1,l2 in zip(list1, list2):\n",
+    "\n",
+    "    print(l1, l2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3e13c69",
+   "metadata": {},
+   "source": [
+    "##### 16. Add a new item to a list after a specified item. e.g list1 = [10, 20, [300, [5000, 6000], 500], 30, 40] becomes [10, 20, [300, [5000, 6000, 7000], 500], 30, 40]. Consider that you know the structure of the list in advance.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "b12a9098",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, [300, [5000, 6000, 7000], 500], 30, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_lists = [10, 20, [300, [5000, 6000], 500], 30, 40] \n",
+    "\n",
+    "list_of_lists[2][1].append(7000)\n",
+    "\n",
+    "print(list_of_lists)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "345edb9e",
+   "metadata": {},
+   "source": [
+    "##### 17. In a list of integers, find the only element that is actually a string of letters representing that number. Then change it with the corresponding integer value. Assume that that number is between 0 and 9. Assume that the list is not ordered."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "0ebf9e6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 7\n",
+      "9 1\n",
+      "[1, 3, 6, 23, 8, 9, 1, 7, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_mix = [1,3,6,23,\"eight\",9,1,7,4,\"TWo\"]\n",
+    "#print(list_mix)\n",
+    "\n",
+    "# Create a list for comparing the eventual words found in the list\n",
+    "comperable_list = [\"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", \"nine\", \"zero\"]\n",
+    "\n",
+    "for element in range(len(list_mix)):    \n",
+    "    if isinstance(list_mix[element],str):\n",
+    "        list_mix[element] = list_mix[element].lower()\n",
+    "        \n",
+    "\n",
+    "        for idx in range(len(comperable_list)):\n",
+    "            if comperable_list[idx] == list_mix[element]:\n",
+    "                print(element,idx)\n",
+    "                list_mix[element] = idx + 1\n",
+    "            else:\n",
+    "                continue\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "print(list_mix)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "f83dcc80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "LLLL\n",
+      "[2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [2,3,4,5,6]\n",
+    "\n",
+    "for j in x:\n",
+    "    if j == 4:\n",
+    "        print(x[j])\n",
+    "        j =  \"LLLL\"\n",
+    "\n",
+    "        print(j)\n",
+    "\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "a1c8c8d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 'Porco dio', 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [2,3,4,5,6]\n",
+    "for i in range(len(x)):\n",
+    "    if x[i] == 4:\n",
+    "        x[i] = \"Porco dio\"\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "571b704a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "basic_list = [2,7,11,4,23,9]\n",
+    "print(basic_list)\n",
+    "\n",
+    "for num in range(len(basic_list)):\n",
+    "    basic_list[num] = basic_list[num]**2\n",
+    "\n",
+    "print(basic_list)"
+   ]
   }
  ],
  "metadata": {
