--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e29019fc",
    "metadata": {},
    "outputs": [
@@ -29,41 +29,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The initial dictionary:  {'name': 'Robert', 'age': 17, 'city': 'Dublin'}\n",
-      "The second version of the dictionary: {'name': 'Robert', 'age': 17, 'city': 'Dublin', 'working student': False, 'sport': 'basketball'}\n",
-      "The third version of the dictionary: {'name': 'Robert', 'age': 18, 'city': 'Dublin', 'working student': True, 'sport': 'basketball'}\n",
+      "The initial dictionary:  {'name': 'Robert', 'age': 17, 'city': 'Dublin'} \n",
+      "\n",
+      "The second version of the dictionary: {'name': 'Robert', 'age': 17, 'city': 'Dublin', 'working student': False, 'sport': 'basketball'} \n",
+      "\n",
+      "The third version of the dictionary: {'name': 'Robert', 'age': 18, 'city': 'Dublin', 'working student': True, 'sport': 'basketball'} \n",
+      "\n",
       "Robert 18\n"
      ]
     }
    ],
    "source": [
     "student_datas = {\"name\" : \"Robert\", \"age\" : 17, \"city\" : \"Dublin\"}\n",
-    "print (\"The initial dictionary: \", student_datas)\n",
+    "print (\"The initial dictionary: \", student_datas, \"\\n\")\n",
     "\n",
     "# adding a couple of new key-value pairs\n",
     "\n",
     "student_datas[\"working student\"] = False\n",
     "student_datas[\"sport\"] = \"basketball\"\n",
-    "print(\"The second version of the dictionary:\" , student_datas)\n",
+    "print(\"The second version of the dictionary:\" , student_datas, \"\\n\")\n",
     "\n",
     "# updating a couple of values \n",
     "\n",
     "student_datas[\"age\"] = 18\n",
     "student_datas[\"working student\"] = True\n",
-    "print(\"The third version of the dictionary:\", student_datas)\n",
+    "print(\"The third version of the dictionary:\", student_datas, \"\\n\")\n",
     "\n",
     "# printing a couple of values\n",
     "\n",
     "print(student_datas[\"name\"], student_datas[\"age\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1af3d95d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
