--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "e29019fc",
    "metadata": {},
    "outputs": [
@@ -59,6 +59,242 @@
     "\n",
     "print(student_datas[\"name\"], student_datas[\"age\"])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afc1bc49",
+   "metadata": {},
+   "source": [
+    "##### 2. Using the previous dictionary, perform the following operations:\n",
+    "- Remove a key-value pair\n",
+    "- Check if a specific key exists in the dictionary\n",
+    "- Print all keys and values in the dictionary separately"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "648581a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Robert', 'age': 18, 'city': 'Dublin', 'working student': True}\n",
+      "\n",
+      "\n",
+      "'City' is a key in the dict!\n",
+      "'Surname is not a key in the dict!\n",
+      "\n",
+      "\n",
+      "name age city working student \n",
+      "\n",
+      "Robert 18 Dublin True "
+     ]
+    }
+   ],
+   "source": [
+    "# remove \"sport\" from the dictionary\n",
+    "\n",
+    "#student_datas.pop(\"sport\")\n",
+    "print(student_datas)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# check if the key \"city\" and the key \"surname\" exists\n",
+    "\n",
+    "if \"city\" in student_datas:\n",
+    "    print(\"'City' is a key in the dict!\")\n",
+    "else:\n",
+    "    print(\"'City' is not a key in the dict!\")\n",
+    "\n",
+    "if \"surname\" in student_datas:\n",
+    "    print(\"'Surname is a key in the dict!\")\n",
+    "else:\n",
+    "    print(\"'Surname is not a key in the dict!\")\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# print all keys \n",
+    "\n",
+    "for keys in student_datas.keys():\n",
+    "    print(keys, end=' ')\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "for values in student_datas.values():\n",
+    "    print(values, end=' ')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fd207e6",
+   "metadata": {},
+   "source": [
+    "##### 3. Create a dictionary from two lists: one containing keys and the other containing corresponding values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "57703c1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Sangiovese': 12, 'Aglianico': 5, 'Merlot': 20}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_one = [\"Sangiovese\", \"Aglianico\", \"Merlot\"]\n",
+    "list_two = [12,5,20]\n",
+    "\n",
+    "wine_rep = {}\n",
+    "for uno, two in zip(list_one, list_two):\n",
+    "    wine_rep[uno] = two\n",
+    "\n",
+    "print(wine_rep)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9e8699d",
+   "metadata": {},
+   "source": [
+    "##### 4. Clean a dictionary by removing all key-value pairs where the value is None."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d956b2a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "wine_rep.clear()\n",
+    "print(wine_rep)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3cca1de",
+   "metadata": {},
+   "source": [
+    "##### 5. Merge two dictionaries into one, ensuring that in case of key conflicts, the values from the second dictionary overwrite those from the first."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b98805d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Ten': 10, 'Twenty': 20, 'Thirty': 20, 'Fourty': 40, 'Fifty': 50}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1 = {'Ten': 10, 'Twenty': 20, 'Thirty': 30}\n",
+    "dict2 = {'Thirty': 20, 'Fourty': 40, 'Fifty': 50}\n",
+    "\n",
+    "dict1.update(dict2)\n",
+    "\n",
+    "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14141ce5",
+   "metadata": {},
+   "source": [
+    "##### 6. From a string, the letters become keys and their frequency becomes values in a dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "77414df7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 3, 'n': 3, 'd': 2, ' ': 8, 't': 3, 'h': 1, 'e': 4, 'y': 1, 's': 2, 'i': 3, 'w': 1, 'f': 1, 'o': 2, 'b': 2, 'r': 1, 'k': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "long_string = \"And they said it was fine to be broken\"\n",
+    "\n",
+    "frequency_dict= {}\n",
+    "\n",
+    "for letter in long_string:\n",
+    "    if letter.lower() not in frequency_dict:\n",
+    "        frequency_dict[letter.lower()] = 1\n",
+    "    else:\n",
+    "        frequency_dict[letter.lower()] += 1\n",
+    "\n",
+    "print(frequency_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8aa110bd",
+   "metadata": {},
+   "source": [
+    "##### 7. From a nested dictionary, extract the value of the innermost dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "cece0589",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name is Alice, the age is 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "personal_data = {'person': {'name': 'Alice', 'age': 30}}\n",
+    "\n",
+    "print(f\"The name is {personal_data['person']['name']}, the age is {personal_data['person']['age']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2eaf301",
+   "metadata": {},
+   "source": [
+    "##### 8. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36e6e23a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
