--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -285,13 +285,107 @@
    "id": "a2eaf301",
    "metadata": {},
    "source": [
-    "##### 8. "
+    "##### 8. Create a dictionary with default values for a list of keys."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "36e6e23a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Kelly': {'designation': 'Developer', 'salary': 8000}, 'Emma': {'designation': 'Developer', 'salary': 8000}, 'Ben': {'designation': 'Developer', 'salary': 8000}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "employees = ['Kelly', 'Emma', 'Ben']\n",
+    "defaults = {\"designation\": 'Developer', \"salary\": 8000}\n",
+    "\n",
+    "default_dict = {}\n",
+    "for name in employees:\n",
+    "    default_dict[name] = defaults\n",
+    "\n",
+    "print(default_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f844b437",
+   "metadata": {},
+   "source": [
+    "##### 9. Create a dictionary from specific keys-value pairs extracted from another dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "6a90c3c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Kelly', 'city': 'New york'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_dict = {\"name\": \"Kelly\",\"age\": 25,\"salary\": 8000,\"city\": \"New york\"}\n",
+    "\n",
+    "# the new dictionary has to contain the followig keys-values pair: name and city\n",
+    "\n",
+    "narrowed_dict = {}\n",
+    "\n",
+    "for key, value in sample_dict.items():\n",
+    "    if key == \"name\":\n",
+    "        narrowed_dict[key] = value\n",
+    "    if key == \"city\":\n",
+    "        narrowed_dict[key] = value\n",
+    "\n",
+    "\n",
+    "print(narrowed_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82df20ee",
+   "metadata": {},
+   "source": [
+    "##### 10. Sort a dictionary by its values and return a new dictionary with the sorted key-value pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "1fb9d65d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Bob': 95, 'Eve': 91, 'Alice': 88, 'Diana': 82, 'Charlie': 70}\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = {'Alice': 88,'Bob': 95,'Charlie': 70,'Diana': 82,'Eve': 91}\n",
+    "\n",
+    "scores_sorted = dict(sorted(scores.items(), key=lambda x : x[1], reverse=True))\n",
+    "\n",
+    "print(scores_sorted)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36e6e23a",
+   "id": "eb006418",
    "metadata": {},
    "outputs": [],
    "source": []
