--- a/strings.ipynb
+++ b/strings.ipynb
@@ -9,9 +9,140 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85128e84",
+   "metadata": {},
+   "source": [
+    "##### 1. Out of a string, create a new string made of only vowels. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d544c8c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aae\n"
+     ]
+    }
+   ],
+   "source": [
+    "surname = \"Callagher\"\n",
+    "\n",
+    "vowels =\"AEIOUaeiou\"\n",
+    "\n",
+    "vowels_surname = ''\n",
+    "\n",
+    "for letter in surname:\n",
+    "    if letter in vowels:\n",
+    "        vowels_surname += letter\n",
+    "\n",
+    "print(vowels_surname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cbbc352",
+   "metadata": {},
+   "source": [
+    "##### 2. Given a string, create a new string made of the first, the middle, and the last character."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0a0e93f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I y y\n"
+     ]
+    }
+   ],
+   "source": [
+    "short_sentence = \"It is definetely a beautiful day\"\n",
+    "\n",
+    "index_mid_char = int(len(short_sentence)/2)\n",
+    "\n",
+    "first_last_mid = short_sentence[0] + ' ' + short_sentence[index_mid_char-1] + ' ' + short_sentence[-1]\n",
+    "\n",
+    "print(first_last_mid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4415406",
+   "metadata": {},
+   "source": [
+    "##### 3. From a given string, display only the 3 middle characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "823673e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ist\n"
+     ]
+    }
+   ],
+   "source": [
+    "long_string = \"Supercalifragilisticexpialidocious\"\n",
+    "\n",
+    "mid_char = int(len(long_string)/2)\n",
+    "\n",
+    "print(long_string[mid_char-2]+long_string[mid_char-1]+long_string[mid_char])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49cc634c",
+   "metadata": {},
+   "source": [
+    "##### 4. From a given string, display oonly the characters that are present at an even index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4527f034",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eetal,cektewahrbfr olae\n"
+     ]
+    }
+   ],
+   "source": [
+    "given_string = \"Eventually, check the weather before to leave\"\n",
+    "even_index_letter = \"\"\n",
+    "\n",
+    "for letter in range(len(given_string)):\n",
+    "    if letter % 2 == 0:\n",
+    "        even_index_letter += given_string[letter]\n",
+    "\n",
+    "print(even_index_letter)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d544c8c1",
+   "id": "7e9ecefa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -24,7 +155,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.1"
   }
  },
