--- a/strings.ipynb
+++ b/strings.ipynb
@@ -140,9 +140,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "472f09c4",
+   "metadata": {},
+   "source": [
+    "##### 5. Given two strings, a new string is made from the second sentence enterded the middle of the first string. Example: \"HelloWorld\" and \"Python\" → \"HelloPythonWorld\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7e9ecefa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HelloPythonWorld\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence_1 = \"HelloWorld\"\n",
+    "sentence_2 = \"Python\"\n",
+    "\n",
+    "new_sentence = \"\"\n",
+    "\n",
+    "mid = int(len(sentence_1) / 2)\n",
+    "\n",
+    "new_sentence = sentence_1[:mid] + sentence_2 + sentence_1[mid:]\n",
+    "\n",
+    "print(new_sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e338e410",
+   "metadata": {},
+   "source": [
+    "##### 6. Create a new string made of the even index character in the first string and the odd index characters from the second string. Choose two strings with the same length. Example: \"Giraffe\" and \"Leopard\" → \"Gerpfre\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "66657415",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gerpfr\n"
+     ]
+    }
+   ],
+   "source": [
+    "animal_1 = \"Giraffedd\"\n",
+    "animal_2 = \"Leopard\"\n",
+    "\n",
+    "even_from_1 = \"\"\n",
+    "odd_from_2 = \"\"\n",
+    "\n",
+    "final = \"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "for letter in range(len(animal_1)):\n",
+    "    if letter % 2 == 0:\n",
+    "        even_from_1 += animal_1[letter]\n",
+    "\n",
+    "for letter in range(len(animal_2)):\n",
+    "    if letter % 2 != 0:\n",
+    "        odd_from_2 += animal_2[letter] \n",
+    "\n",
+    "for x,j in zip(even_from_1,odd_from_2):\n",
+    "    final += x + j\n",
+    "   \n",
+    "print(final)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "583f242e",
    "metadata": {},
    "outputs": [],
    "source": []
