--- a/strings.ipynb
+++ b/strings.ipynb
@@ -222,9 +222,194 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7b1ae36",
+   "metadata": {},
+   "source": [
+    "##### 7. Riarrange the characters of a string in a way that the lowercase letters should come first. Example: \"DC Comics\" → \"omicsDCC\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "583f242e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "omicsDCC\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp_string = \"DC Comics\"\n",
+    "\n",
+    "lower_case = \"\"\n",
+    "upper_case = \"\"\n",
+    "\n",
+    "riarranged = \"\"\n",
+    "\n",
+    "for letter in inp_string:\n",
+    "    if letter.islower():\n",
+    "        lower_case += letter\n",
+    "    elif letter.isupper():\n",
+    "        upper_case += letter\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "riarranged = lower_case + upper_case\n",
+    "\n",
+    "print(riarranged)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0962a62",
+   "metadata": {},
+   "source": [
+    "##### 8. From a given random string, divided the different element of the string, based on the character type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "423edf7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gnnqde\n",
+      "3490125\n",
+      "@-##_\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand_string = \"Gn34@n90-1q##_25de\"\n",
+    "\n",
+    "letters = \"\"\n",
+    "digits = \"\"\n",
+    "chars = \"\"\n",
+    "\n",
+    "for x in rand_string:\n",
+    "    if x.isalpha():\n",
+    "        letters += x\n",
+    "    elif x.isdigit():\n",
+    "        digits += x\n",
+    "    else:\n",
+    "        chars += x\n",
+    "\n",
+    "print(letters)\n",
+    "print(digits)\n",
+    "print(chars)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e17960d5",
+   "metadata": {},
+   "source": [
+    "##### 9. You have first_string = \"Abc\" and second_string = \"Xyz\". Create third_string = \"AzbycX\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "eb58ddc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AzbycX\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_string = \"Abc\"\n",
+    "second_string = \"Xyz\"\n",
+    "\n",
+    "rev_second = \"\"\n",
+    "third_string = \"\"\n",
+    "\n",
+    "for let in range(len(second_string),0,-1):\n",
+    "    rev_second += second_string[let - 1]\n",
+    "\n",
+    "for x,j in zip(first_string,rev_second):\n",
+    "    third_string += x + j\n",
+    "\n",
+    "print (third_string)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7559bd0",
+   "metadata": {},
+   "source": [
+    "##### 10. Check if all the characters of a string are also present in an other string. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "6bc6b903",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "letter 'A' is not present in the second string\n",
+      "letter 'n' is not present in the second string\n",
+      "letter 'n' is not present in the second string\n",
+      "letter 'y' is not present in the second string\n",
+      "\n",
+      "\n",
+      "letter 'H' is not present in the second string\n",
+      "letter 'n' is not present in the second string\n",
+      "letter 'a' is not present in the second string\n",
+      "letter 'n' is not present in the second string\n",
+      "letter 'd' is not present in the second string\n",
+      "letter 'z' is not present in the second string\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_char(str_1, str_2)->None:\n",
+    "\n",
+    "    for char in str_1:\n",
+    "        if char.lower() not in str_2:\n",
+    "            print(f\"letter '{char}' is not present in the second string\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "              \n",
+    "        \n",
+    "\n",
+    "# testing\n",
+    "name = \"Antony\"\n",
+    "surname = \"Hernandez\"\n",
+    "checks = \"mix_of_letters\"\n",
+    "\n",
+    "check_char(name, checks)\n",
+    "print(\"\\n\")\n",
+    "check_char(surname,checks)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "583f242e",
+   "id": "40686023",
    "metadata": {},
    "outputs": [],
    "source": []
