--- a/strings.ipynb
+++ b/strings.ipynb
@@ -407,9 +407,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01ccfcfe",
+   "metadata": {},
+   "source": [
+    "##### 11. Find how many times a word occured in a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "40686023",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The word 'the' occured 6 times.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"The table in the kitchen and the piano in the living room are piece of the old owner of the house.\"\n",
+    "\n",
+    "# Find how many time \"the\" occur.\n",
+    "searched = \"the\"\n",
+    "\n",
+    "finding_the = sentence.lower().count(searched.lower())\n",
+    "\n",
+    "print(f\"The word '{searched}' occured {finding_the} times.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "c0e2ca5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The word 'the' occured 6 times.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"The table in the kitchen and the piano in the living room are piece of the old owner of the house.\"\n",
+    "\n",
+    "# Find how many time \"the\" occur.\n",
+    "searched = \"the\"\n",
+    "counter = 0\n",
+    "words_in_sentence = sentence.lower().split()\n",
+    "\n",
+    "for word in words_in_sentence:\n",
+    "    if word == searched:\n",
+    "        counter += 1\n",
+    "\n",
+    "print(f\"The word '{searched}' occured {counter} times.\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40686023",
+   "id": "a2617ff6",
    "metadata": {},
    "outputs": [],
    "source": []
